# give_back_to_ceasar_or_god

./: Cargo.toml  README.md  build.rs  config.toml  package_release.ps1
assets/: register.cmd  register1.cmd  register2.cmd
src/: lib.rs  main.rs
test/: test.xlsx  test_kso.doc  test_kso.ppt  test_ms.docx  test_ms.pptx  test_wps.ppt  test_wps.xls
